# GoodByeBlueSkys

./: .gitignore  AGENTS.md  ARQUIVOS.md  Cargo.toml  README.md  RULES.md  WORKFLOW.md  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: sidecar-bundle-smoke.yml  tauri-e2e-smoke.yml
agents/: architect.md  builder.md  reviewer.md
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/e2e/: run-tauri-e2e.mjs  wdio.tauri.conf.mjs
apps/desktop/src/: App.integration.test.tsx  App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/src/: main.rs  runtime_app.rs  runtime_session.rs  runtime_sidecar.rs
crates/agent-supervisor/: Cargo.toml
crates/agent-supervisor/src/: lib.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: lib.rs
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: contracts.rs  lib.rs  policy.rs  registry.rs
crates/runtime-sidecar/: Cargo.toml
docs/architecture/: ADR-0001-foundation-phase1.md  baseline.md  phase-1-backlog.md
docs/manual-test/: prototype-checklist.md
docs/ops/: branch-protection.md
docs/testing/: tauri-e2e-smoke.md
packs/: README.md
providers/: README.md
skills/handoff-builder/: SKILL.md
skills/implementation/: SKILL.md
skills/planning/: SKILL.md
skills/review/: SKILL.md
tools/: README.md
tools/scripts/: _last-branch-protection-payload.json  apply-branch-protection.ps1  prepare-sidecar.ps1  smoke-sidecar-bundle.ps1
(+5 files in other folders)
